# github-pm-agent

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  TODOS.md  config.example.yaml  config.studybuddy.yaml  config.test.yaml  pyproject.toml  start_studybuddy.sh
.runtime-test/: cursors.json  memory_notes.jsonl  outbox.jsonl  queue_done.jsonl  queue_suspended.jsonl  seen_ids.json
config/: devenv.yaml  e2e-weather.yaml  example.json  simple-portfolio-website.json
docs/: multi-agent-test.md
memory/: README.md
scripts/: e2e_weather_runner.py  local_devenv_server.py  run_ai_cli.py
skills/: blocked-work.md  clarify.md  memory-distill.md  pm-core.md  release-readiness.md  review-readiness.md  scope-guard.md
tasks/: handover-studybuddy.md  todo.md
tests/: test_action_toolkit.py  test_active_phase_recovery_scanner.py  test_ai_adapter.py  test_app.py  test_artifact_store.py  test_capability_routing.py  test_cli.py  test_coding_session.py  test_created_issue_fanout_scanner.py  test_devenv_client.py  test_engine.py  test_engine_action_execution.py  test_engine_escalation.py  test_github_client.py  test_handlers.py  test_issue_coding_recovery_scanner.py  test_issue_coding_sync_scanner.py  test_memory_loop.py  test_merge_conflict_scanner.py  test_multi_account_config.py  test_poller.py  test_project_release_scanner.py  test_prompt_library.py  test_queue_store.py  test_role_registry.py  test_session_store.py  test_status_probe.py  test_utils.py  test_veto_and_conditions.py  test_workflow_instance.py  test_workflow_orchestrator.py
workflows/: default.yaml  (+6 more)
(+115 files in other folders)
